# OpenGL-CMake-Setup

./: CMakeLists.txt  README.md  main.cpp
